--- a/myProjects/website portfolio/css/start.css
+++ b/myProjects/website portfolio/css/start.css
@@ -31,6 +31,8 @@
     --footerGray: rgba(153,153,153,1);
     --footerDarkGray: rgba(175,175,175,1);
 
+    --footerMediaGray: rgba(213,213,213,1);
+
 /* progress */
     --grayDark: rgba(182,182,182);
     --greenDark: rgba(0,148,63,1);
@@ -99,9 +101,7 @@ body{
     z-index: -1;
 }
 
-.hide{
-    display:none;
-}
+
 ::-webkit-scrollbar {
     width: 15px;
     background-color:white;
@@ -146,8 +146,8 @@ body{
 
     height: 70px;
 
-    right: 10px;
-    bottom: 10px;
+    right: 5%;
+    bottom: 1%;
     background-color: rgba(255,255,255,.82);
     /* border: 3px white solid; */
     /* border-radius: 15px; */
