--- a/myProjects/website portfolio/css/skills.css
+++ b/myProjects/website portfolio/css/skills.css
@@ -27,8 +27,9 @@
 
     /* flex C */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .skill{
     position: relative;
