--- a/myProjects/website portfolio/css/start.css
+++ b/myProjects/website portfolio/css/start.css
@@ -85,7 +85,10 @@ button{
 }
 body{
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;  
+    /* font-family: 'PT Sans', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
+
+    /* font-family: Arial, Helvetica, sans-serif;   */
 
 }
 
@@ -154,6 +157,10 @@ body{
     /* border: 3px white solid; */
     /* border-radius: 15px; */
     z-index: 3;
+}
+.arrow:hover{
+    background-color: rgba(255,255,255,1);
+   
 }
 
 .arrow__ico{
