--- a/myProjects/website portfolio/css/skills.css
+++ b/myProjects/website portfolio/css/skills.css
@@ -1,4 +1,6 @@
 .main__section--skills{  
+    min-height: 75vh;
+
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -20,7 +22,7 @@
 .skills{
     min-height: 75vh;
     width: 100%;
-    height: 75vh;
+    /* height: 75vh; */
     margin-top: 25px;
 
     /* background-color: yellow; */
@@ -35,7 +37,9 @@
     position: relative;
     /* background-color: red; */
     width: 31%;
+    min-width: 200px;
     height: 65%;
+    margin-left: 2.5%;
 
     text-align: center;
 
@@ -44,6 +48,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.skill--first{
+    margin-left: 0;
 }
 .skill__img{
     position: relative;
@@ -102,7 +109,7 @@ white-space: nowrap;
     
 }
 .skill__p{
-    
+    width: 100%;
 }
 
 /*   <section class="skills">
