--- a/myProjects/website portfolio/css/start.css
+++ b/myProjects/website portfolio/css/start.css
@@ -1,4 +1,5 @@
 :root{
+    /* extra , media query */
     --sectionMinHeight: 320px;
     --portfolioMinHeight: var(--sectionMinHeight);
 
@@ -10,6 +11,13 @@
   
 
     --aboutLineLeft: 50%;
+
+
+    --noteAfterLeftBlue: calc(111%);
+    --noteAfterLeft: calc(-11%);
+
+
+
 
     --noteBeforeSize: 25px;
     --noteWidth: 45%;
@@ -67,6 +75,7 @@
 
 
 }
+/* RESET */
 *{
     padding: 0;
     margin: 0;
@@ -85,13 +94,10 @@ button{
 }
 body{
     background-color: #fff;
-    /* font-family: 'PT Sans', sans-serif; */
     font-family: 'Open Sans', sans-serif;
 
-    /* font-family: Arial, Helvetica, sans-serif;   */
-
 }
-
+/*                                            adds */
 .paralax{
     position: fixed;
     top: 0;
@@ -106,19 +112,13 @@ body{
     z-index: -1;
 }
 
-
 ::-webkit-scrollbar {
     width: 15px;
     background-color:white;
-    /* display: none; */
   }
   ::-webkit-scrollbar-thumb {
     background-color: #000;
   }
-   
-  /* ::-webkit-scrollbar-thumb:hover {
-    background-color: transparent;
-  } */
 
   @keyframes fadeIn{
  0%{
@@ -138,13 +138,6 @@ body{
     }
 }
 
-
-
-
-
-
-
-
 .arrow{
     position: fixed;
     width: 70px;
@@ -154,9 +147,7 @@ body{
     right: 5%;
     bottom: 1%;
     background-color: rgba(255,255,255,.82);
-    /* border: 3px white solid; */
-    /* border-radius: 15px; */
-    z-index: 3;
+    z-index: 5;
 }
 .arrow:hover{
     background-color: rgba(255,255,255,1);
