--- a/myProjects/website portfolio/css/footer.css
+++ b/myProjects/website portfolio/css/footer.css
@@ -42,7 +42,7 @@
     width: 100%;
     height: 100%;
     color: white;
-    margin-right: 8.5%;
+    /* margin-right: 8.5%; */
     font-style: normal;
      /* flex C */
      display: flex;
@@ -80,6 +80,9 @@
 .footer__specialization{}
 
 .footer__myNumber{
+    position: relative;
+    left: 10%;
+
     height: 2.5%;
     width: 100%;
     margin-top: 8.5%;
@@ -90,23 +93,44 @@
     justify-content: center;
     align-items: flex-start;
 }
+
 .footer__myEmail{
+    position: relative;
+    left: 10%;
+
     height: 2.5%;
     width: 100%;
 
     margin-bottom: 9.5%;
     margin-top: 7.5%;
+
+    word-break: break-all;
+
     /* flex C */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 }
+.footer__ico{
+    position: absolute;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+.footer__ico--contact{
+    transform: translate(0%,-50%);
+    left: -10%;
+}
+
 .footer__button{
     width: 72%;
     min-width: 70px;
     height: 10%;
     min-height: 10px;
+
+    cursor: pointer;
+
 }
 .footer__wrapper--media{
 align-items: flex-end;
@@ -121,12 +145,7 @@ align-items: flex-end;
     
 }
 
-.footer__ico{
-    position: absolute;
-    left: 50%;
-    top:50%;
-    transform: translate(-50%,-50%);
-}
+
 
 .footer__media--first:hover{
     background-color: var(--colorFb);
@@ -195,6 +214,8 @@ align-items: flex-end;
     font-size: 1.3em;
     font-weight: 600;
     border: none;
+
+    cursor: pointer;
 }
 /*       <!-- wrapper 90% of width                                                               -->
         <section class="main__wrapper footer">
