--- a/myProjects/website portfolio/css/header.css
+++ b/myProjects/website portfolio/css/header.css
@@ -263,7 +263,7 @@
 
         padding: 3%;
         list-style: none;
-        font-size: 2.9em;
+        font-size: 2.8em;
         font-weight: 400;
         cursor: pointer;
 
@@ -444,13 +444,14 @@
 
         margin-top: 20px;
         overflow: hidden;
+        transition: .1s .05s linear;
 
         /* z-index: 2; */
 
     }
     .header__button:hover{
         color: black;
-        color: rgba(255,255,255,.5);
+        /* color: rgba(255,255,255,.5); */
         
     }
     .header__button::after{
