--- a/myProjects/website portfolio/css/projects.css
+++ b/myProjects/website portfolio/css/projects.css
@@ -56,6 +56,7 @@
     align-items: flex-start;
     /* overflow-x: scroll; */
     /* z-index: 2; */
+    cursor: pointer;
 
 }
 .projects__project--first{
