--- a/myProjects/website portfolio/css/about.css
+++ b/myProjects/website portfolio/css/about.css
@@ -40,7 +40,7 @@
 .about__section{
     /* background-color: blue; */
     position: relative;
-    height: 25%;
+    min-height: 25%;
     width: 70%;
     display: flex;
     flex-direction: row;
@@ -57,7 +57,7 @@
 
 }
 .about__describe{
-    height:var(--noteHeight);
+    min-height:var(--noteHeight);
     width: var(--noteWidth);
     /* background-color: black;  */
     /* color: #fff; */
