--- a/myProjects/website portfolio/css/progress.css
+++ b/myProjects/website portfolio/css/progress.css
@@ -153,7 +153,7 @@
     min-height:calc(320px * .5);
     transform: translateX(100vw);
     transition: .2s;
-    flex-grow: 1;
+    margin-left: 10px;
 }
 .progress__describe--runIn{
     position: relative;
