--- a/myProjects/website portfolio/css/skills.css
+++ b/myProjects/website portfolio/css/skills.css
@@ -45,8 +45,10 @@
     margin-left: auto;
     margin-right: auto;
 
-    margin-bottom: 5%;
+    margin-bottom: auto;
+
     margin-top: 5%;
+
 
 
     text-align: center;
