--- a/myProjects/game memory cards/public/css/style.css
+++ b/myProjects/game memory cards/public/css/style.css
@@ -4,14 +4,21 @@
   box-sizing: border-box;
 }
 
-
+body{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 div{
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   flex-wrap: wrap;
 }
 
