--- a/myProjects/game memory cards/public/css/style.css
+++ b/myProjects/game memory cards/public/css/style.css
@@ -11,6 +11,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 div{
@@ -24,6 +25,7 @@ div{
 
 canvas{
   position: relative;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 
 }
 
