--- a/myProjects/game memory cards/public/css/style.css
+++ b/myProjects/game memory cards/public/css/style.css
@@ -15,6 +15,8 @@ body{
   overflow: hidden;
   background-image: url("/public/img/ground.jpg");
   background-size: cover;
+  box-shadow: inset 110vw 0 0 0px rgba(0,0,0,0.5);
+
 }
 
 div{
@@ -30,6 +32,12 @@ canvas{
   position: relative;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 
+}
+.card{
+  /* border: 1px solid black; */
+}
+.table{
+  box-shadow: inset 0px 0px 50px 0px rgba(0,0,0,0.75);
 }
 
 .tip {
