--- a/node learn/myNode/http/public/views/index.html
+++ b/node learn/myNode/http/public/views/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
-
-    <title>Document</title>
+    <title>nody</title>
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
-    <h1>Error 404</h1>
+    <div class="div">Why why why, cry cry cry</div>
   </body>
 </html>
